added popup skels for info on buttons

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <receiver android:name=".tools.NotifyReceiver" ></receiver>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
